--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 </div>
 <h4>Example 4: flex and align-items</h4>
-<div class="parent exmaple4">
+<div class="parent example4">
     <div class="row">
         <div class="dark">
 
@@ -91,6 +91,51 @@
         </div>
     </div>
 
+</div>
+<h4>example 5: space-around vs space-between</h4>
+<div class="parent example5">
+    <div class="yellowline">
+
+    </div>
+<div class="bars">
+    <div class="bar">
+
+    </div>
+    <div class="bar">
+
+    </div>
+    <div class="bar">
+
+    </div>
+    <div class="bar">
+
+    </div>
+</div>
+
+</div>
+<div>
+    <h4>Example 6: putting it all together</h4>
+    <div class="parent example6">
+        <div class="red child1">
+
+        </div>
+        <div class="child2">
+            <div class="darkblue">
+
+            </div>
+            <div class="grandchild1">
+                <div class="lightblue">
+
+                </div>
+                <div class="g-grandchild1">
+                    <div class="lime">
+
+                    </div>
+                    <div class="lime"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
